Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/Tenent_Information__c.object-meta.xml
<CustomObject>
    <label>Tenant Information</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tenant Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>