Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Tenent_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>