Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Active_or_Expired_Trial__c.field-meta.xml
<CustomField>
    <fullName>Active_or_Expired_Trial__c</fullName>
    <label>Active or Expired Trial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>