Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Active_Trial__c.field-meta.xml
<CustomField>
    <fullName>Active_Trial__c</fullName>
    <label>Active Trial (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>