Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Chemoffice_Admin_be_the_same_as_the_SNB__c.field-meta.xml
<CustomField>
    <fullName>Chemoffice_Admin_be_the_same_as_the_SNB__c</fullName>
    <description>To confirm that ChemOffice Admin and SNB admin is the same. (RITM0092395)</description>
    <label>Chemoffice Admin be the same as the SNB?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>