Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>