Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <label>Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>