Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Paid_Order__c.field-meta.xml
<CustomField>
    <fullName>Paid_Order__c</fullName>
    <label>Paid Order?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>