Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Product</fullName>
            </value>
            <value>
                <fullName>E3 Product</fullName>
            </value>
            <value>
                <fullName>Signals Product</fullName>
            </value>
            <value>
                <fullName>Trial Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>