Perkin-UAT/force-app/main/default/objects/Tenent_Information__c/fields/Tenent_Details__c.field-meta.xml
<CustomField>
    <fullName>Tenent_Details__c</fullName>
    <label>Tenant Details</label>
    <type>TextArea</type>
</CustomField>